# ReRoute_v2

./: .dockerignore  .envrc  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.graphhopper  GCP-DEPLOYMENT.md  GITHUB_ACTIONS_FIX.md  README.md  alembic.ini  cloudbuild-backend.yaml  cloudbuild-main.yaml  current-service.yaml  dev-logs.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  lint-check.sh  nginx.conf  package-lock.json  package.json  railway.json  setup-deployment.md  setup-maps.sh
.github/workflows/: ci-deploy.yml  ci-simple.yml  ci.yml  deploy-production.yml  deploy-with-terraform.yml
backend/: .dockerignore  .flake8  Dockerfile  Procfile  README.md  alembic.ini  conftest.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  test_chat_api.py  test_openai_setup.py  test_profile_flow.py  test_simple.py  test_strava_integration.py  test_strava_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 1c15fd6e1355_add_route_models.py  6f75d3b39f79_add_user_and_profile_models.py  add_home_location_to_profiles.py  add_password_reset_tokens_table.py  add_subscriptions_table.py  add_usage_logs_table.py  bb8513bebcd9_add_user_sessions_table.py  bfccd9020c92_switch_profile_fields_to_imperial_units_.py  f1c14c8dc273_add_training_plans_table.py  ff3311a5e5f9_add_user_and_profile_models_only.py
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  chat.py  profiles.py  routes.py  strava.py  subscription.py  training.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  route.py  strava.py  subscription.py  training.py  usage.py  user.py
backend/app/schemas/: auth.py  chat.py  profile.py  route.py  subscription.py  terrain.py  training.py
backend/app/services/: ai_agent.py  email.py  graphhopper.py  openai_chat.py  overpass_service.py  route_generator.py  strava_route_integration.py  terrain_research_agent.py  training_plan_generator.py  usage_service.py  workout_route_planner.py
backend/static/: index.html
backend/static/assets/: Auth-B3GKDa59.js  Auth-BK-qyQUq.js  Auth-BPZsKCLc.js  Auth-BrjV93sJ.js  Auth-C02AMOcF.js  Auth-C8ChoWgt.js  Auth-CYltpy6S.js  Auth-DLRuHbYd.js  Auth-DMTrCmvv.js  Auth-pQ3oKeDy.js  Card-92T93fZF.js  Card-BE9Wdjxi.js  Card-BN9WnKKO.js  Card-CNqQx6kk.js  Card-CSWohRKQ.js  Card-CW5YRtJ4.js  Card-CzHHNMpy.js  Card-DKrR1EZb.js  Card-DqxJp0ka.js  Card-cW7jCJxU.js  Input-CB3cHtMx.js  Input-CIAbyDyu.js  Input-D6qGd1z6.js  Input-DUuDWYdM.js  Input-Dn9UVRjd.js  Input-Ib4febaT.js  Input-VEupGxcH.js  Input-bgH0fKm2.js  Input-g4ea0ICu.js  Input-xeEg30Vj.js  Label-7WoWfknZ.js  Label-BLeVVHOi.js  Label-BhH9t5VR.js  Label-C3KqOlkx.js  Label-CQb8DJ_W.js  Label-CkAW8haD.js  Label-CniVGTRt.js  Label-Dfy8rg9z.js  Label-Dh_m01D0.js  Label-MtwBwPv4.js  (+87 more)
backend/tests/: test_api.py  test_api_unit.py  test_terrain_routing.py
deploy/: deploy.sh  digitalocean.sh  gcp.sh  railway.sh  vercel.sh
frontend/: .env.production  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/public/: manifest.json  robots.txt  sitemap.xml
gcp/: cloudbuild.yaml
graphhopper/: Dockerfile  Dockerfile.local  bike.json  config.gcp.yml  config.local.yml  gravel.json  mountain.json  railway.json
memory/: MEMORY.md  build-log.md  project-details.md
scripts/: gcp-domain-setup.sh  setup-domain.sh  setup-gcp.sh
terraform/: main.tf  terraform.tfvars.example
(+44 files in other folders)
